fixed "dk" logo
dk logo was not showing up after adding background image

--- a/index style.css
+++ b/index style.css
@@ -175,7 +175,7 @@ p{
 }
 
 .btn{
-    display: flex;
+    display: relative;
     align-items: center;
     justify-content: center;
     padding-top: 25%;
